--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "paper-dashboard-react",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+  "homepage": "https://bake-n-break.web.app",
   "dependencies": {
     "@babel/core": "7.14.2",
     "axios": "^0.21.4",
